--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=8080
-DB_USERNAME=postgres
-DB_PASSWORD=
-DB_DATABASE=«db_name»
+DB_USERNAME=task_list_app
+DB_PASSWORD=task_list_app
+DB_DATABASE=task_list_development
 DB_HOST=localhost
